# oasis-backend

./: .dockerignore  .gitignore  Dockerfile  init-gcp.sh  main.py  pyproject.toml  setup_oasis.sh
.github/workflows/: deploy.yml
common/: exceptions.py  rate_limit.py
common/auth/: security.py
common/cache/: redis_client.py
common/database/: client.py
common/events/: __init__.py  connection_manager.py  publisher.py  router.py  schemas.py  subscriber.py
migrations/: 20260225000001_org_profile_fields.sql
scripts/: load-test.js  warmup.py
services/auth_service/: main.py
services/crm_service/: dependencies.py
services/journey_service/: main.py
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260122000002_rls_policies.sql  20260129000001_auth_audit_function.sql  20260129202614_auto_promote_tech_owner.sql  20260129215457_restaure_rls_policies.sql  20260129221335_fix_journey_schema_policies.sql  20260130000001_cleanup_rls_policies.sql  20260206000001_journey_organizations.sql  20260208000001_add_enrollments_updated_at.sql  20260209000001_fix_activity_reward_sync.sql  20260209000002_rename_points_base_to_base_points.sql  20260209000003_reward_type_to_text.sql  20260210000001_resource_schema.sql  20260211000001_crm_schema.sql  20260211000002_crm_indexes_policies_changelog.sql  20260213000001_gamification_org_scoping.sql  20260213000002_crm_profile_enrichment.sql  20260213000003_crm_contact_changelog_trigger.sql  20260214000001_crm_contact_company.sql  20260214000002_crm_schema_grants.sql  20260220000001_fix_profiles_update_rls_recursion.sql  (+39 more)
(+83 files in other folders)
