[tool.poetry]
name = "oasis-api"
version = "0.1.0"
description = "Backend de microservicios para OASIS Digital"
authors = ["Oasis Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
supabase = "^2.4.0"
google-generativeai = "^0.4.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.0"
email-validator = "^2.3.0"
slowapi = "^0.1.9"  # Rate limiting

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"  # Ruff ahora maneja linting y formatting
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# CONFIGURACIÓN DE RUFF (Sustituye a Black e Isort)
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E: Error, F: Pyflakes, I: Isort (orden de imports), B: Bugbear
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
# Ruff usará este estándar para formatear el código (estilo Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
